samples/_failures_safe/1761505367_dfed57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05248b84.c: In function ‘main’:
./samples/SAFE/__tmp_05248b84.c:163:9: error: expected declaration or statement at end of input
  163 |         printf("No input provided\n");
      |         ^~~~~~
./samples/SAFE/__tmp_05248b84.c:163:9: error: expected declaration or statement at end of input
